--- a/java-8/java1.8/src/main/resources/application.properties
+++ b/java-8/java1.8/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/deneme1
+#server.port=9090
+spring.datasource.url=jdbc:postgresql://localhost:5432/deneme2
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=123
 
-
 spring.jpa.hibernate.ddl-auto=update 
+
+!spring.jpa.hibernate.ddl-auto=create-drop  
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.javax.persistance.validation.mode = none
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 
